# mexitk

./: .gitignore  .zenodo.json  AGENTS.md  BUILDING.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.context/: ideas.md  plan.md  research.md  scratch_history.md
.github/workflows/: README.md  ci.yml  release.yml
docs/: COMPATIBILITY.md  itk_opcode_mapping.md  matitk_opcode_registry.txt
matlab/: run_mexitk_tests.m
src/: mexitk.cpp  mexitk_common.h  opcode.cpp  opcode.h
src/opcodes/: faab.cpp  fbb.cpp  fbd.cpp  fbe.cpp  fbl.cpp  fbt.cpp  fca.cpp  fcf.cpp  fd.cpp  fdg.cpp  fdm.cpp  ff.cpp  ffft.cpp  fgad.cpp  fgm.cpp  fgmrg.cpp  fls.cpp  fmean.cpp  fmedian.cpp  fmmcf.cpp  fomt.cpp  fsn.cpp  fvbih.cpp  fvmi.cpp  rd.cpp  rtps.cpp  scc.cpp  scss.cpp  sct.cpp  sfm.cpp  sgac.cpp  sic.cpp  slls.cpp  snc.cpp  sot.cpp  ssdls.cpp  sws.cpp
tests/: mexitkFixture.m  mexitkFixtureCall.m  tCallingConvention.m  tFcaReference.m  tFixtureHygiene.m  tFomtReference.m  tPhase1FilterSmoke.m  tPhase2MorphologySmoke.m  tPhase3RegionGrowingSmoke.m  tPhase4GradientsSmoke.m  tPhase5LevelSetSmoke.m  tPhase6RegistrationSmoke.m  tPhase7DispositionsSmoke.m  tReferenceBounded.m  tReferenceExact.m  tReferenceRejections.m  tSwsReference.m
tests/fixtures/: MANIFEST.txt  edge_cases.mat  faab_0p01_50_1_bin33_double.mat  faab_0p01_50_2_bin33_double.mat  faab_0p01_50_2_bin33_int32.mat  faab_0p01_50_2_bin33_single.mat  faab_0p01_50_2_raw_double.mat  faab_0p01_50_2_raw_int32.mat  faab_0p01_50_2_raw_single.mat  faab_0p01_50_50_bin33_double.mat  fbb_1_double.mat  fbb_1_int32.mat  fbb_1_single.mat  fbb_1_uint8.mat  fbd_1_255_bin_double.mat  fbd_1_255_double.mat  fbd_1_255_int32.mat  fbd_1_255_single.mat  fbd_1_255_uint8.mat  fbd_1_300_double.mat  fbd_1_300_uint8.mat  fbd_1_7_bin7_double.mat  fbe_1_255_bin_double.mat  fbe_1_255_bin_int32.mat  fbe_1_255_double.mat  fbe_1_255_int32.mat  fbe_1_255_single.mat  fbe_1_255_uint8.mat  fbe_1_7_bin7_double.mat  fbl_10_2_double.mat  fbl_2_10_double.mat  fbl_2_10_int32.mat  fbl_2_10_single.mat  fbl_2_10_uint8.mat  fbl_5_5_double.mat  fbt_0_1_20_1e39_double.mat  fbt_0_1_20_1e39_single.mat  fbt_0_1_20_300_double.mat  fbt_0_1_20_300_uint8.mat  fbt_0_1_20_60_double.mat  (+262 more)
tools/: build_itk.sh  check_redistributable.sh  classify_fixtures.m  measure_deviation.m
tools/capture_reference/: README.md  capture_case.m  capture_classes.m  local_isdryrun.m  local_isresume.m  local_mark_complete.m  local_md5.m  local_summarize.m  reconstructFixtureInput.m  refcap_config.m  s00_smoke_test.m  s01_fomt_output_count.m  s01b_fomt_semantics.m  s02_fca_capture.m  s03_fomt_capture.m  s04_sws_capture.m  s05_edge_cases.m  s06_provenance.m  s07_filters_capture.m  s08_morphology_capture.m  s09_regiongrow_capture.m  s10_gradients_capture.m  s10b_faab_crash_probe.m  s11_fca_sws_integral_capture.m  s12_inference_probes.m  s13_unimplemented_probes.m  s14_rtps_landmarks.m  s15_ffft_packing.m
